istio-feature-demos/espresso-app/istio-manifests/virtual-service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: espresso-shop
spec:
  hosts:
  - "*"
  gateways:
  - espresso-shop-gateway
  http:
  - match:
    route:
    - destination:
        host: espresso-shop-web-svc
        port:
          number: 8090
